[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/Actors/Player/Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Floppa Folder/FloppaHead.png" type="Texture" id=2]
[ext_resource path="res://Floppa Folder/floppaAngryEdit.png" type="Texture" id=3]
[ext_resource path="res://Floppa Folder/floppaAngryEditRed.png" type="Texture" id=4]
[ext_resource path="res://Floppa Folder/floppa_slash.png" type="Texture" id=5]
[ext_resource path="res://src/Actors/Player/SwordSlashSound.mp3" type="AudioStream" id=6]
[ext_resource path="res://src/Actors/Player/FloppaHiss.mp3" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 1158, 347 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1144, 0, 880, 1250 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2316, 1041, 1158, 347 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 3474, 1041, 1158, 347 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 8 ), SubResource( 4 ), SubResource( 6 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 378.125, 567.526 )

[sub_resource type="CircleShape2D" id=11]
radius = 131.775

[sub_resource type="CircleShape2D" id=1]
radius = 43.2897

[node name="Player" type="KinematicBody2D" groups=["player"]]
collision_layer = 5
collision_mask = 13
script = ExtResource( 1 )

[node name="FloppaSprite" type="AnimatedSprite" parent="." groups=["player"]]
position = Vector2( 34, -8 )
scale = Vector2( 0.328571, 0.324292 )
z_index = 1
frames = SubResource( 2 )

[node name="HP_Label" type="RichTextLabel" parent="."]
margin_left = -49.0
margin_top = -127.0
margin_right = 116.0
margin_bottom = -75.0
text = "Current HP: 6"

[node name="SlashSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 126, -10 )
scale = Vector2( 0.08, 0.145808 )
frames = SubResource( 7 )
flip_h = true

[node name="SlashArea" type="Area2D" parent="SlashSprite" groups=["hitbox"]]
collision_layer = 6
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlashSprite/SlashArea"]
position = Vector2( -62.5, -68.5833 )
shape = SubResource( 10 )

[node name="Sword Slash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -13.11

[node name="Damage Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="Hurtbox" type="Area2D" parent="." groups=["player"]]
position = Vector2( -44, 28 )
scale = Vector2( 0.328571, 0.324292 )
collision_layer = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" groups=["hurtbox", "player"]]
position = Vector2( 249.566, -89.4256 )
shape = SubResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["hurtbox", "player"]]
position = Vector2( 38, 0 )
shape = SubResource( 1 )
